Make navbar pretty again and add stuff I forgot what I even did but good stuff

--- a/frontend/src/VaccinationReminders/VaccinationReminders.css
+++ b/frontend/src/VaccinationReminders/VaccinationReminders.css
@@ -27,6 +27,15 @@
     transition: background-color 0.3s ease;
 }
 
+.modalTitle {
+    font-family: 'Source Sans 3', sans-serif;
+    font-size: 1.3em;
+    font-weight: 600;
+    text-align: left;
+    color: #19484f;
+    margin-bottom: 20px;
+}
+
 .reminder-button:hover {
     background: rgb(42, 98, 150);
 }
@@ -44,3 +53,94 @@
     -webkit-text-fill-color: transparent;
     font-weight: bold;
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .modal-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 400px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .child-select {
+    width: 100%;
+    padding: 10px;
+    margin: 20px 0;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .modal-buttons {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  
+  .modalButton {
+    margin-top: 20px;
+    padding: 10px 15px;
+    background-color: #B6BDFB;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.modalButton:hover {
+    background-color: #C6E8E8;
+}
+
+.font16 {
+    font-family: 'Source Sans 3', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: left;
+    color: #19484f;
+    padding-left: 5px;
+    position: relative;
+    cursor: pointer;
+}
+
+.add-child-section {
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  .child-input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .add-child-button {
+    padding: 10px 20px;
+    background-color: #14406e;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .add-child-button:hover {
+    background-color: rgb(42, 98, 150);
+  }
