--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .app-background {
   background: linear-gradient(180deg, #B6BDFB, #C6E8E8);
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column; 
   align-items: center; 
