--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,10 @@
+/* #root {
+  min-height: 100vh
+} */
+
 .app-background {
   background: linear-gradient(180deg, #B6BDFB, #C6E8E8);
+  min-height: 100vh;
   height: 100%;
   display: flex;
   flex-direction: column; 
